# columnarframe

./: README.md  pyproject.toml
columnarframe/: __init__.py  column.py  concat.py  frame.py  read_csv.py  read_excel.py  utils.py
data/: issue21_1.csv  issue21_2.csv  output.csv  output.tsv  test_data.csv  test_data.tsv  test_data.xls  test_data.xlsx  test_data2.csv  test_data2.xlsx
tests/: test_column.py  test_columnarframe.py  test_concat.py  test_frame.py  test_frame2.py  test_frame3.py  test_read_csv.py  test_read_excel.py
