[tool.poetry]
name = "columnarframe"
version = "0.1.4"
description = ""
authors = ["tamuto <tamuto@infodb.jp>"]
license = "Apache-2.0"

packages = [
    { include="columnarframe", from="." }
]

[tool.poetry.dependencies]
python = "^3.8"
pyarrow = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
