[tool.poetry]
name = "columnarframe"
version = "0.1.5"
description = ""
authors = ["tamuto <tamuto@infodb.jp>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tamuto/columnarframe"
repository = "https://github.com/tamuto/columnarframe"

packages = [
    { include="columnarframe", from="." }
]

[tool.poetry.dependencies]
python = "^3.8"
pyarrow = "^3.0.0"
pyexcel = "^0.6.6"
pyexcel-io = "^0.6.4"
pyexcel-xls = "^0.6.2"
pyexcel-xlsx = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
