[tool.poetry]
name = "columnarframe"
version = "0.2.1"
description = ""
authors = ["tamuto <tamuto@infodb.jp>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tamuto/columnarframe"
repository = "https://github.com/tamuto/columnarframe"

packages = [
    { include="columnarframe", from="." }
]

[tool.poetry.dependencies]
python = "^3.8"
pyarrow = "^3.0.0"
openpyxl = "^3.0.7"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
